my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_old_call_noargs/ESYNTAX_old_call_noargs.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_old_call_noargs.dml:11:5: error ESYNTAX: syntax error at 'call': reserved word
